--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Visualizer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="https://png.pngtree.com/template/20200605/ourmid/pngtree-data-logo-with-the-symbol-d-image_379617.jpg" />
   <script type="importmap">
 {
   "imports": {
