--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <title>Data Visualizer</title>
     <link rel="icon" href="https://png.pngtree.com/png-clipart/20200727/original/pngtree-data-logo-with-the-symbol-d-png-image_5389356.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.13.0",
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "recharts": "https://esm.sh/recharts@^3.1.2",
-    "xlsx": "https://esm.sh/xlsx@^0.18.5"
+    "recharts": "https://esm.sh/recharts@^3.1.2"
   }
 }
 </script>
+<style>
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .animate-fade-in { animation: fadeIn 0.5s ease-in-out; }
+</style>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-gray-100 dark:bg-gray-900">
