--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Data Visualizer</title>
     <link rel="icon" href="https://png.pngtree.com/png-clipart/20200727/original/pngtree-data-logo-with-the-symbol-d-png-image_5389356.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            screens: {
+              'xs': '475px',
+            }
+          }
+        }
+      }
+    </script>
     <script type="importmap">
 {
   "imports": {
